--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@ layout: default
     {% if paginator.previous_page > 1 %}
       <a href="/page{{ paginator.previous_page }}" class="previous">Previous</a>
     {% elsif paginator.previous_page == 1 %}
-      <a href="{{ site.baseurl }}" class="previous">Previous</a>
+      <a href="/" class="previous">Previous</a>
     {% endif %}
 
     {% if paginator.next_page %}
